# stereoPoseEKF

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  note
.svn/: wc.db
Debug/: objects.mk
Debug/src/: dq2omega.d  featureManager.d  keypointsManager.d  main.d  plotData.d  poseEKF.d  ppTransCov.d  ppTransEst.d  subdir.mk
src/: Makefile  dq2omega.cpp  dq2omega.h  featureManager.cpp  featureManager.h  img2pcd.cpp  imgFtRelated.cpp  imgFtRelated.h  input.cpp  input.h  keypointsManager.cpp  keypointsManager.h  kltUncertainty.cpp  main.cpp  pcVIsual.cpp  pcVIsual.h  plotData.cpp  plotData.h  poseEKF.cpp  poseEKF.h  ppTransCov.cpp  ppTransCov.h  ppTransEst.cpp  ppTransEst.h  stereoPoseEKF_viewerConfig.h.in  stereoSolver.cpp  utility.cpp  utility.h
